# nsl

./: .dockerignore  Cargo.toml  README.md  README.zh-CN.md  config.example.toml  deny.toml  justfile  llms.txt
.github/workflows/: ci.yml  docker.yml  release.yml
crates/nsl/: Cargo.toml
crates/nsl/src/: error.rs  main.rs  npx_guard.rs  tunnel.rs
crates/nsl/src/certs/: generate.rs  mod.rs  sni.rs  trust.rs
crates/nsl/src/cli/: handler.rs  mod.rs
crates/nsl/src/config/: mod.rs  tests.rs
crates/nsl/src/discover/: mod.rs  worktree.rs  worktree_tests.rs
crates/nsl/src/hosts/: mod.rs  tests.rs
crates/nsl/src/pages/: mod.rs  tests.rs
crates/nsl/src/platform/: mod.rs
crates/nsl/src/proxy/: handler.rs  handler_tests.rs  mod.rs  server.rs  websocket.rs  websocket_tests.rs  websocket_unit_tests.rs
crates/nsl/src/run/: mod.rs
crates/nsl/src/utils/: mod.rs  tests.rs
crates/nsld/: Cargo.toml  Dockerfile  Dockerfile.local  SECURITY.md  config.example.toml  tokens.example.toml
crates/nsld/src/: default_cert.rs  forward_auth.rs  main.rs  public.rs
crates/nsld/src/acme/: httpreq.rs  mod.rs  resolver.rs  store.rs
crates/tunnel/: Cargo.toml
crates/tunnel/src/: client.rs  config.rs  constants.rs  lib.rs  protocol.rs  registry.rs  server.rs  tls.rs  tokens.rs
npm/: sync-version.mjs
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/nsl/: README.md  package.json
npm/win32-x64/: package.json
src/: main.rs  routes.rs  status.rs
src/cli/: handler.rs  mod.rs
src/config/: mod.rs  tests.rs
src/pages/: tests.rs
src/platform/: unix.rs  windows.rs
src/proxy/: daemon.rs  handler.rs  server.rs
src/run/: framework.rs  mod.rs  tests.rs
tests/src/: helpers.ts
tests/src/cli/: commands.test.ts
tests/src/tunnel/: nsld-e2e.test.ts
