[package]
name = "nsl"
version = "0.1.4"
edition = "2024"
authors = ["nkcore ltd"]
description = "Replace port numbers with stable, named .localhost URLs. For humans and agents."
license = "Apache-2.0"
repository = "https://github.com/nsiod/nsl"
homepage = "https://github.com/nsiod/nsl"
keywords = ["local", "development", "proxy", "localhost"]
categories = ["command-line-utilities", "development-tools", "web-programming::http-server"]

[[bin]]
name = "nsl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
dirs = "6"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
process-wrap = { version = "9.1.0", features = ["tokio1"] }
rcgen = { version = "0.14.7", features = ["pem", "x509-parser"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls-pemfile = "2"
x509-parser = "0.18.1"
time = "0.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.2", features = ["signal", "process", "user", "fs"] }
daemonize = "0.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Threading",
  "Win32_Security",
] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio-test = "0.4"

[profile.release]
lto = true
strip = true
codegen-units = 1
