[workspace]
resolver = "2"
members = [
    "crates/tunnel",
    "crates/nsl",
    "crates/nsld",
]

[workspace.package]
version = "0.1.4"
edition = "2024"
authors = ["nkcore ltd"]
license = "Apache-2.0"
repository = "https://github.com/nsiod/nsl"
homepage = "https://github.com/nsiod/nsl"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", default-features = false }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
clap = { version = "4", features = ["derive"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12", "logging"] }
rustls-pemfile = "2"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
bincode = "1.3"
tempfile = "3"
rcgen = { version = "0.14.7", features = ["pem", "x509-parser"] }
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }
ring = "0.17"
serde_bytes = "0.11"
sha2 = "0.10"
pem = "3"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
instant-acme = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
serde_json = "1"
hex = "0.4"
x509-parser = "0.18"

[profile.release]
lto = true
strip = true
codegen-units = 1
