[package]
name = "nsld"
description = "nsl tunnel server daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "nsld"
path = "src/main.rs"

[dependencies]
tunnel = { path = "../tunnel", version = "0.1.4" }
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
clap.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rcgen.workspace = true
pem.workspace = true
sha2.workspace = true
hex.workspace = true
instant-acme.workspace = true
reqwest.workspace = true
serde_json.workspace = true
x509-parser.workspace = true
thiserror.workspace = true
bytes = "1"

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
