[package]
name = "tunnel"
description = "QUIC reverse-tunnel protocol, client, and server (shared library)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
toml.workspace = true
rustls.workspace = true
quinn.workspace = true
bincode.workspace = true
notify.workspace = true
ring.workspace = true
rcgen.workspace = true
serde_bytes.workspace = true
sha2.workspace = true
pem.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
